# vk

./: .env  .gitignore  Cargo.toml  README.md  build.rs  shell.nix
assets/shaders/: default.frag  default.vert  default_f.wgsl  default_v.spv
src/: lib.rs  main.rs
src/core/: app.rs  buffers.rs  camera.rs  commands.rs  debug.rs  device.rs  framebuffer.rs  game.rs  geometry.rs  mod.rs  pipeline.rs  structures.rs  surface.rs  swapchain.rs  sync.rs  uniforms.rs  vertex.rs
src/io/: file.rs
