[package]
name = "vkcr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.0"
ash-window = "0.12.0"
cgmath = "0.18.0"
egui = "0.19.0"
env_logger = "0.9.1"
indexmap = "1.9.1"
log = "0.4.17"
raw-window-handle = "0.5.0"
winit = "0.27.3"
