[package]
name = "vkcr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.0", features = ["linked"] }
ash-window = "0.12.0"
# cgmath = "0.18.0"
env_logger = "0.9.1"
log = "0.4.17"
naga = { version = "0.10.0", features = ["glsl-in", "spv-out"] }
raw-window-handle = "0.5.0"
winit = "0.27.3"
