[package]
name = "vkcr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.0", features = ["linked"] }
ash-window = "0.12.0"
bincode = "1.3.3"
bytemuck = { version = "1.12.3", features = ["derive"] }
cgmath = { version = "0.18.0", features = ["serde"] }
env_logger = "0.10.0"
gpu-allocator = "0.21.0"
image = "0.24.5"
log = "0.4.17"
memoffset = "0.8.0"
raw-window-handle = "0.5.0"
serde = { version = "1.0.152", features = ["serde_derive"] }
winit = "0.27.3"
